--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@
 name: catloaf & coffee
 
 # Your site's title (e.g., Ben's Awesome Site, The GitHub Blog, etc.), used as part of the title tag like Home | Ben's Awesome Site.
-title: catloaff & coffee
+title: catloaf & coffee
 
 # Link to avatar in the navbar (/assets/images/avatar.png). Leave empty if no logo desired. Two avatars for light and dark mode.
 # Avatar for light mode site
-lightavatar: /assets/images/ccLogo.png
+lightavatar: /assets/images/ccLogoTitle.png
 # Avatar for dark mode site
-darkavatar: /assets/images/ccLogo-grey.png
+darkavatar: /assets/images/ccLogoTitle-grey.png
 
 # A short description (e.g., A blog dedicated to reviewing cat gifs), used as part of the title tag like Ben's Awesome Site | A blog dedicated to reviewing cat gifs instead of Ben's Awesome Site | Long description about a blog dedicated to reviewing cat gifs that would be used when page.title is not defined.
 tagline: The sequel!
