navbar improvements, styling, post uploads
navbar now full width
wordprint given anchor
added h1-6 fonts
text select to pink
all 2025 posts now uploaded

--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ permalink: /:year/:month/:day/:title/
 
 # Includes an icon in the footer for each username you enter
 footer-links:
-  email: sageleaf@catloafcoffee.com
+  email: hello@catloafcoffee.com
   facebook:
   github: nekoandco/catloafCoffee
   instagram:
