all content formatted
added styling for:
quotes
content/spoiler/info warnings
sidebars

--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ logo: /assets/images/ccLogo.png
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics:
 
-permalink: /:year/:month/:day/:title/
+permalink: /:categories/:year/:title/
 
 # Includes an icon in the footer for each username you enter
 footer-links:
