--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ tagline: Milk, sugar, and a dash of Autism. Now including estrogen!
 description: Milk, sugar, and a dash of Autism. Now including estrogen!
 
 # The full URL to your site. Note: site.github.url will be used by default.
-url: catloafcoffee.com
+url: https://catloafcoffee.com/
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
